# monami

./: Cargo.toml  README.md
docs/: monami-architecture.drawio
frontend/: index.html.template  update-index-html.sh
scripts/: monami-client.sh  monami-server.sh
src/: client.rs  main.rs  server.rs  shared.rs  utils.rs
