[package]
name = "monami"
version = "0.1.0"
authors = ["Minhwan Kim <azurelysium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
futures = "0.1.28"
tokio = "0.1.22"
chrono = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
hostname = "0.1.5"
rust-crypto = "0.2.36"
base64 = "0.9.0"
sha2 = "0.8"
